# rk

./: CMakeLists.txt
.github/workflows/: ci.yml  cmake.yml
app/: main.cpp
include/: currentconditiondisplay.h  displayelement.h  observer.h  subject.h  weatherdata.h
src/: currentconditiondisplay.cpp  weatherdata.cpp
tests/: test_currentconditiondisplay.cpp  test_observer.cpp  test_subject.cpp  test_weatherdata.cpp
